[package]
name = "paranoid-allocator"
version = "0.1.0"
description = "A global allocator wrapper offering additional security"
license = "MIT"
repository = "https://github.com/kayabaNerve/healthy-paranoia"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"

[dependencies]
zeroize = "1.3"
