[package]
name = "asymmetric-ratchet"
version = "0.1.0"
description = "An asymmetric ratchet"
license = "MIT"
repository = "https://github.com/kayabaNerve/healthy-paranoia"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"

[dependencies]
zeroize = { version = "1.3", features = ["zeroize_derive"] }
rand_core = "0.6"

group = { version = "0.12", optional = true }

[features]
diffie_hellman = ["group"]
default = ["diffie_hellman"]
