[package]
name = "asymmetric-ratchet"
version = "0.1.0"
description = "An asymmetric ratchet"
license = "MIT"
repository = "https://github.com/kayabaNerve/healthy-paranoia"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"

[dependencies]
zeroize = "1.3"
rand_core = "0.6"

group = { version = "0.12", optional = true }

[dev-dependencies]
generic-array = { version = "0.14", features = ["zeroize"] }
k256 = { version = "0.11" }

[features]
std = []
diffie_hellman = ["group"]
default = ["std", "diffie_hellman"]
