[package]
name = "double-ratchet"
version = "0.1.0"
description = "A double ratchet constructed from a symmetric and asymmetric ratchet"
license = "MIT"
repository = "https://github.com/kayabaNerve/healthy-paranoia"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"

[dependencies]

[dev-dependencies]
