[package]
name = "symmetric-ratchet"
version = "0.1.0"
description = "A symmetric ratchet"
license = "MIT"
repository = "https://github.com/kayabaNerve/healthy-paranoia"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = []
edition = "2021"

[dependencies]
zeroize = { version = "1.3", optional = true }
digest = { version = "0.10", optional = true }

[features]
digest_ratchet = ["zeroize", "digest"]
default = ["digest_ratchet"]
